--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -39,5 +39,5 @@ jobs:
       - run: npm run build --if-present
       - name: Run tests
         env:
-          MONGODB_URI: mongodb://localhost:27017/testdb
+          MONGODB_URI: mongodb://localhost:27017/
         run: npm test
