--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
+  "name": "agile-project",
+  "version": "1.0.0",
+  "type": "module",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js"
+  },
   "dependencies": {
     "axios": "^1.12.2",
-    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
@@ -9,5 +16,8 @@
     "express-session": "^1.18.2",
     "mongodb": "^6.20.0",
     "xss": "^1.0.15"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
