--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
 		"express-session": "^1.18.2",
 		"mongodb": "^6.20.0",
 		"xss": "^1.0.15"
+	},
+	"devDependencies": {
+		"chai": "^6.2.0",
+		"chai-as-promised": "^8.0.2",
+		"mocha": "^11.7.4"
 	}
 }
