--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
-	"type": "module",
-	"scripts": {
-		"start": "node app.js",
-		"test": "node tests/mainTests.js"
-	},
-	"dependencies": {
-		"axios": "^1.12.2",
-		"bcrypt": "^6.0.0",
-		"bcryptjs": "^3.0.2",
-		"dotenv": "^17.2.3",
-		"express": "^5.1.0",
-		"express-handlebars": "^8.0.1",
-		"express-session": "^1.18.2",
-		"mongodb": "^6.20.0",
-		"xss": "^1.0.15"
-	},
+  "name": "agile-project",
+  "version": "1.0.0",
+  "type": "module",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "test": "node tests/mainTests.js"
+  },
+  "dependencies": {
+    "axios": "^1.12.2",
+    "bcryptjs": "^3.0.2",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "express-handlebars": "^8.0.1",
+    "express-session": "^1.18.2",
+    "mongodb": "^6.20.0",
+    "xss": "^1.0.15"
+  },
 	"devDependencies": {
 		"chai": "^6.2.0",
 		"chai-as-promised": "^8.0.2",
-		"mocha": "^11.7.4"
-	}
+		"mocha": "^11.7.4",
+    "nodemon": "^3.1.7"
+
+  }
 }
