--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "express-handlebars": "^8.0.1",
     "express-session": "^1.18.2",
     "mongodb": "^6.20.0",
+    "pdfkit": "^0.17.2",
     "xss": "^1.0.15"
   },
-	"devDependencies": {
-		"chai": "^6.2.0",
-		"chai-as-promised": "^8.0.2",
-		"mocha": "^11.7.4",
+  "devDependencies": {
+    "chai": "^6.2.0",
+    "chai-as-promised": "^8.0.2",
+    "mocha": "^11.7.4",
     "nodemon": "^3.1.7"
-
   }
 }
