--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-handlebars": "^8.0.1",
     "express-session": "^1.18.2",
     "mongodb": "^6.21.0",
+    "multer": "^2.0.2",
     "pdfkit": "^0.17.2",
     "xss": "^1.0.15"
   },
